rules/ingress-and-egress-blocked/test/ccnp-ingress-egress/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test
    namespace: my-ns
spec:
      containers:
      - args:
        - server
        image: test:latest
        name: test
        imagePullPolicy: Never
